postgresql-common (190) UNRELEASED; urgency=medium

  * Move packaging repository to salsa.debian.org
  * pg_virtualenv: Error out if no server packages are installed.
  * postgresql-common recommends e2fsprogs, we are using chattr in
    pg_createcluster. (Closes: #887251)
  * PgCommon.pm: Fix include directives parser, spotted by ironhalik, thanks!
  * Rewrite architecture.html as README.md.
  * t/032_ssl_key_permissions.t: Adjust for 9.4 in oldstable which still has
    the old permissions check.

 -- Christoph Berg <myon@debian.org>  Mon, 25 Dec 2017 18:03:38 +0100

postgresql-common (189) unstable; urgency=medium

  [ Chris Lamb ]
  * Update README.Debian for postgresql-10. (Closes: #876438)

  [ Christoph Berg ]
  * dh_make_pgxs: Use PostgreSQL license as default, fix extension name.
  * Modernize README.Debian's version numbers and SSL instructions.
  * postgresql@.service: Ignore startup failure, recovery might take
    arbitrarily long to finish. The actual service status still correctly
    reflects if the postmaster process is running.
    https://www.postgresql.org/message-id/20171111205316.u56lkmkakdmcx6zm%40msg.df7cb.de
  * supported-versions: Version 10 on Ubuntu 18.04 (bionic). (Closes: #881501)
  * debian/maintscripts-functions: bump update-alternatives priority of
    version 1x to 1x0.
  * Unsupport 9.2 on apt.postgresql.org.
  * t/140_pg_config.t: Also test /usr/bin/pg_config.libpq-dev, and check
    MKDIR_P and abs_top_build/srcdir in Makefile.global.

 -- Christoph Berg <myon@debian.org>  Thu, 14 Dec 2017 21:13:24 +0100

postgresql-common (188) unstable; urgency=medium

  * pg_ctlcluster, pg_createcluster, pg_upgradecluster: Use lchown instead
    of chown to mitigate privilege escalation via symlinks. (CVE-2017-8806.
    Related to CVE-2017-12172 in PostgreSQL; extends our earlier fix for
    CVE-2016-1255.)
  * dh_make_pgxs: Add options to set package name and version.