@@ -19,14 +19,12 @@ my @pids;
 # no ports open
 is (next_free_port, 5432, 'next_free_port is 5432');
 
-exit if ($PgCommon::rpm); # RedHat doesn't provide nc, stop here
-
 # open a localhost ipv4 socket
-push @pids, open2(\*CHLD_OUT, \*CHLD_IN, qw(nc -4 -q0 -l 127.0.0.1 5432));
+push @pids, open2(\*CHLD_OUT, \*CHLD_IN, qw(nc -4 -l 127.0.0.1 5432));
 usleep 2*$delay;
 is (next_free_port, 5433, 'next_free_port detects localhost ipv4 socket');
 # open a wildcard ipv4 socket
-push @pids, open2(\*CHLD_OUT, \*CHLD_IN, qw(nc -4 -q0 -l 5433));
+push @pids, open2(\*CHLD_OUT, \*CHLD_IN, qw(nc -4 -l 5433));
 usleep $delay;
 is (next_free_port, 5434, 'next_free_port detects wildcard ipv4 socket');
 
@@ -36,11 +34,11 @@ SKIP: {
     skip "skipping IPv6 tests", 2 if ($ENV{SKIP_IPV6});
 
     # open a localhost ipv6 socket
-    push @pids, open2(\*CHLD_OUT, \*CHLD_IN, qw(nc -6 -q0 -l ::1 5434));
+    push @pids, open2(\*CHLD_OUT, \*CHLD_IN, qw(nc -6 -l ::1 5434));
     usleep $delay;
     is (next_free_port, 5435, 'next_free_port detects localhost ipv6 socket');
     # open a wildcard ipv6 socket
-    push @pids, open2(\*CHLD_OUT, \*CHLD_IN, qw(nc -6 -q0 -l 5435));
+    push @pids, open2(\*CHLD_OUT, \*CHLD_IN, qw(nc -6 -l 5435));
     usleep $delay;
     is (next_free_port, 5436, 'next_free_port detects wildcard ipv6 socket');
 }
