@@ -6,6 +6,8 @@ postgresql-common (190) UNRELEASED; urgency=medium
     pg_createcluster. (Closes: #887251)
   * PgCommon.pm: Fix include directives parser, spotted by ironhalik, thanks!
   * Rewrite architecture.html as README.md.
+  * t/006_next_free_port.t: Drop -q argument from netcat, nmap-ncat.rpm
+    doesn't have it.
   * t/032_ssl_key_permissions.t: Adjust for 9.4 in oldstable which still has
     the old permissions check.
 
